[package]
name = "solana-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
axum-server = "0.7.1"
tower-cookies = "0.10.0"
hyper = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4"
serde = {version= "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"

[dev-dependencies]
anyhow = "1"
